// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should do 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
  Object {
    "type": "INIT_DAILY_STAMP_TIME",
  },
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`should do catchApiError if error is not occurred 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
  Object {
    "payload": FatalError {
      "errorCode": undefined,
      "message": "ERROR: initDailyStampTime",
      "name": "Error",
      "stacktrace": null,
      "type": "FatalError",
    },
    "type": "CATCH_UNEXPECTED_ERROR",
  },
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`should not do catchApiError if error is occurred 1`] = `
Array [
  Object {
    "type": "LOADING_START",
  },
  Object {
    "type": "LOADING_END",
  },
]
`;

exports[`should not do when delegated 1`] = `Array []`;
